--- a/server/response.html
+++ b/server/response.html
@@ -38,7 +38,7 @@
 
             <section>
                 <p>Author: Giordano de Brito</p>
-                <img src="">
+                <img src="https://raw.githubusercontent.com/GIOdeBrito/simple-webserver-in-c/e067d2b6b374b332152c00c5f45f8214d7d768f9/assets/bol.png">
             </section>
 
             <footer>
